<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">考赢报志愿</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="smart_recomment">智能推荐</string>
    <string name="manual_tim">手工筛选</string>
    <string name="volunteer_collection">志愿收藏</string>
    <string name="person_center">个人中心</string>
    <string name="internet_exception">网络异常，请重试</string>
    <string name="fetch_again_in_seconds"><xliff:g id="number">%d</xliff:g>秒</string>
    <string name="input_phone_sms_code">请输入%1$s收到的验证码</string>
    <string name="fetch_again">重新发送</string>
    <string name="register_successfully">注册成功</string>
    <string name="commit">提交</string>
    <string name="login">登录</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="register">注册</string>
    <string name="password_length_error">密码长度应为6-20个字符</string>
    <string name="sms_local_check_error">验证码为4位数字</string>
    <string name="verify_and_set_password">验证并设置密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入登录密码</string>
    <string name="input_right_phone_number">请输入正确的手机号</string>
    <string name="set_login_password">设置登录密码</string>
    <string name="major_collected_in_college">已收藏%1$d的专业</string>
    <string name="smart_recomment_tip">智能推荐功能结合性格测试、考生今年的分数和排位，以及历年各高校的录取信息，如各专业录取人数、所有考生的详细分数和排位等数据，进行大数据分析及智能算法预测，为您推荐最适合志愿填报的参考院校及专业。</string>
    <string name="title_activity_smart_recomment">智能推荐</string>
    <string name="annalyse">正在使用大数据分析算法进行智能计算，请等待...</string>
    <string name="smart_recomment_smart1">第一步:输入考生信息</string>
    <string name="smart_recomment_smart2">第二步:性格测试</string>
    <string name="smart_recomment_smart3">智能推荐结果</string>
    <!-- <string name="smart_recomment_smart3">第三步:智能推荐</string> -->
    <string name="input_student_name">输入考生姓名</string>
    <string name="input_student_id">输入考生身份证号</string>
    <string name="input_student_score">输入考生成绩</string>
    <string name="input_student_position">输入考生排位</string>
    <string name="select_zone">选择考区</string>
    <string name="li_ke">理科</string>
    <string name="wen_ke">文科</string>
    <string name="current">当前</string>
    <string name="index_questions">%1$s题</string>
    <string name="same_password_error">新旧密码不能一致</string>
    <string name="progress_bar_committing_please_wait">提交中，请稍候</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="title_activity_detail_condition">DetailConditionActivity</string>
    <string name="title_activity_smart_recomment_result">SmartRecommentResultActivity</string>
    <string name="remment_tip">请务必填写真实信息，否则会严重影响推荐结果</string>
    <string name="about_content">以上推荐信息仅供考生参考，不作正式填报之用，欲获得更加精准信息，请购买高招专家咨询服务,付款后,客服将在5分钟内为您预约专家.</string>
    <string name="website">微信公众号</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="webchat">QQ交流群</string>
    <string name="website_content">本是教育</string>
    <string name="sina_weibo_content">本是教育</string>
    <string name="webchat_content">293443273</string>
    <string name="already_copy_to_clipboard">已将“%1$s”复制到粘贴板中</string>
    <string name="school_numbers">符合条件学校 %1$s</string>
    <string name="major_numbers">符合条件专业 %1$s</string>
    <string name="get_questions">获取题目...</string>
    <string name="post_answers">提交答案...</string>
    <string name="single_major_report">单专业分析报告</string>
    <string name="rank_index">第%1$d名</string>

</resources>
