<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/dimen_17_dip"
              android:paddingRight="@dimen/dimen_17_dip"
              android:background="@color/white">
    <!--手机号码-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_34_dip"
            android:gravity="center_vertical"
            android:text="@string/input_phone_sms_code"
            android:textSize="@dimen/dimen_12_dip"
            android:textColor="@color/first_text"
            android:includeFontPadding="false"
            android:id="@+id/cell_number"/>
    <!--短信验证码-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_34_dip"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/sms_code_layout">
        <EditText
                android:layout_width="0dip"
                android:layout_height="@dimen/dimen_34_dip"
                android:layout_weight="1"
                android:hint="输入短信验证码"
                android:id="@+id/sms_code"
                style="@style/EditText.SingleLine"/>
        <Button
                android:layout_width="121dip"
                android:layout_height="@dimen/dimen_34_dip"
                android:layout_marginLeft="@dimen/dimen_9_dip"
                android:gravity="center"
                android:text="@string/fetch_again"
                android:textSize="@dimen/dimen_14_dip"
                android:includeFontPadding="false"
                android:id="@+id/fetch_code"
                style="@style/MajorButton"/>
    </LinearLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_34_dip"
            android:layout_marginTop="@dimen/dimen_23_dip"
            android:text="@string/commit"
            android:id="@+id/commit"
            style="@style/MajorButton"/>
</LinearLayout>

