<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/content_bg">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_120_dip"
            android:background="@drawable/login_bg">
        <ImageView
                android:layout_width="@dimen/dimen_71_dip"
                android:layout_height="@dimen/dimen_71_dip"
                android:id="@+id/icon"
                android:layout_centerInParent="true"
                android:src="@drawable/touxiang"
                android:scaleType="centerInside"/>
    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dimen_17_dip"
            android:layout_marginRight="@dimen/dimen_17_dip">
        <!--手机/昵称-->
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_34_dip"
                android:hint="用户名/手机号"
                android:layout_marginTop="@dimen/dimen_17_dip"
                android:textSize="@dimen/dimen_12_dip"
                style="@style/EditText.SingleLine"
                android:id="@+id/user_name"/>
        <!--密码-->
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_34_dip"
                android:layout_marginTop="@dimen/dimen_14_dip"
                android:inputType="textPassword"
                android:hint="请输入密码"
                android:textSize="@dimen/dimen_12_dip"
                style="@style/EditText.SingleLine"
                android:id="@+id/password"/>
        <!--登录-->
        <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_43_dip"
                android:layout_marginTop="@dimen/dimen_23_dip"
                android:text="@string/login"
                android:id="@+id/login"
                style="@style/MajorButton"/>
        <!--注册-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_23_dip">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="@dimen/dimen_14_dip"
                    android:textColor="@color/hyperlink_text"
                    android:id="@+id/register"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textSize="@dimen/dimen_14_dip"
                    android:textColor="@color/hyperlink_text"
                    android:id="@+id/forget_password"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

